<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TessApp</string>
    <string name="serviceUrl">https://10.0.2.2:8999</string>
    <integer name="connectionTimeout">3000</integer>
    <integer name="socketTimeout">10000</integer>

    <string name="db_camera_btn_text">Recognition</string>
    <string name="auth_error">Authentication error occurred!</string>
    <string name="no_connection_detected">No internet connection detected. Do you wish to save images for further processing?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="image_taking_explanation">Take two pictures: first of the enterprise registration number, second of purchase total cost</string>
    <string name="images_taking_succeeded">Images taking succeeded</string>
    <string name="sending_images">Sending images...</string>
    <string name="take_new_pictures">Take new pictures</string>
    <string name="images_sent_successfully">Images sent successfully. You will be notified as soon as the images are processed.</string>
    <string name="images_saved_successfully">Images saved successfully.
        You will be able to send them to the server if you have internet connection.</string>
    <string name="logged_in_as">Logged in as: </string>
    <string name="tech_error_posting_images">A technical error occurred while posting images</string>
    <string name="save_images">Save images</string>
    <string name="retry_sending_images">Retry</string>
    <string name="list_expenses">Show expenses</string>
    <string name="find">Find</string>
    <string name="error_gcm_reg">Error obtaining Google id for push notifications</string>
    <string name="recognized_total_cost">Recognized total cost:</string>
    <string name="recognized_reg_num">Recognized reg. number:</string>
    <string name="header_receipt_recogniton_failed">Recognition of receipt data failed!</string>
    <string name="notification_title_recognition_error">TessApp recognition error</string>
    <string name="notification_recognition_error">New erroneous recognition :(</string>
    <string name="notification_title_recognition_ok">TessApp successful recognition</string>
    <string name="notification_recognition_ok">New successful recognition!</string>
    <string name="header_company">Company:</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>
    <string name="retry">Retry</string>
    <string name="ignore">Ignore</string>
    <string name="recognition_succeeded">Recognition succeeded!</string>
    <string name="reg_number">Reg. number:</string>
    <string name="total_cost">Total cost:</string>
    <string name="loading_progress">Loading..</string>
    <string name="press_to_confirm">Press to confirm!</string>
    <string name="pending_images">Pending images</string>
    <string name="no_pending_images_found">No pending images found!</string>
    <string name="images_posting_succeeded">Images posting succeeded</string>
    <string name="no_internet_dashboard">No internet connection! Functionality is limited</string>
    <string name="no_internet_connection_to_proceed">No internet connection to proceed!</string>
    <string name="start_date_after_end">Start date cannot be after end date!</string>
    <string name="end_date_cant_be_in_future">End date can\'t be in the future!</string>
    <string name="confirm_expense">Confirm the following expense</string>
    <string name="submit_manually">Submit manually</string>
    <string name="enter_new_expense">Enter new expense</string>
</resources>
