<?xml version="1.0" encoding="utf-8"?>
<com.roman.ttu.client.layout.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#1c1c19">

    <Button
        android:id="@+id/btn_camera_recognition"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/button_camera"
        android:text="@string/db_camera_btn_text" />

    <Button android:id="@+id/btn_list_expenses"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/button_list_expenses"
        android:text="@string/list_expenses"
        />


    <Button android:id="@+id/btn_pending_images"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/button_pending_images"
        android:text="@string/pending_images"
        />
</com.roman.ttu.client.layout.DashboardLayout>